[project]
name = "prefect-superset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2",
    "prefect>=3.4",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2",
    "ruff>=0.11",
]
